<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YouTour</string>
    <string name="action_settings">退出</string>
    <string name="hello_world">Hello world!</string>
    <string name="appName">YouTour云游</string>
    <string name="place">地区</string>
    <string name="topic">主题</string>
    <string name="nearme">附近</string>
    <string name="qrcode">二维码</string>
    <string name="explore">探索</string>
    <string name="my_tour">我的旅程</string>
    <string name="setting">设置</string>
    <string name="my_preference">个人信息</string>
    <string name="myaccount">我的账号</string>
    <string name="history">浏览历史</string>
    <string name="downloadmanage">下载管理</string>
    <string name="versionupdate">版本更新</string>
    <string name="feedback">意见反馈</string>
    <string name="rateme">给我打分</string>
    <string name="about">关于云游</string>
    <string name="systeminfo">系统通知</string>
    <string name="exit">退出登录</string>
    <string name="login">登录</string>
    <string name="regiest">注册</string>
    <string name="download">下载</string>
    <string name="create">创建</string>
    <string name="favorite">收藏</string>
    <string name="last_update">最近更新</string>
    <string name="nonetwork">连接网络后重试</string>
    <string name="retry">重试</string>
    <string name="no_data">找不到更多信息</string>
    <string name="discover">发现探索</string>
    <string name="line_detail">线路信息</string>
    <string name="more">浏览站点</string>
    <string name="author_other">浏览作者其他作品</string>
    <string name="tourStops">线路站点</string>
    <string name="nearmestring">附近线路</string>
    <string name="stopmaptitle">站点分布</string>
    <string name="map_not_ready">SupportMapFragment初始化失败</string>

</resources>