<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/grey"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/backBtton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/selector_imagebutton"
            android:onClick="backClicked"
            android:src="@drawable/left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/line_detail"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/collectBttonClicked"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/selector_imagebutton"
            android:onClick="collectClicked"
            android:src="@drawable/heart" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="15dp" >

                <!-- ListRow Left sied Thumbnail image -->

                <LinearLayout
                    android:id="@+id/thumbnail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="5dip"
                    android:background="@color/white" >

                    <ImageView
                        android:id="@+id/line_image"
                        android:layout_width="100dip"
                        android:layout_height="100dip"
                        android:scaleType="centerInside"
                        android:src="@drawable/no_image" />
                </LinearLayout>

                <TextView
                    android:id="@+id/adress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/thumbnail"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/thumbnail"
                    android:text="中国广州"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/adress"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dip"
                    android:layout_toRightOf="@id/thumbnail"
                    android:scrollHorizontally="true"
                    android:text="广州大学城四日游"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    />

                <RatingBar
                    android:id="@+id/rating_bar"
                    style="@style/MyRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="3.5" />

                <Button
                    android:id="@+id/price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignBottom="@+id/thumbnail"
                    android:layout_alignLeft="@+id/title"
                    android:background="@drawable/selector_list2"
                    android:onClick="stopDetailClicked"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/more"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="2dp"
                android:background="@color/grey"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingTop="5dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nearmesmall" />

                <TextView
                    android:id="@+id/total_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:text="5"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/clockwrite" />

                <TextView
                    android:id="@+id/total_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingRight="10dp"
                    android:text="4d"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/map1" />

                <TextView
                    android:id="@+id/total_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:text="3km"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/musicwrite" />

                <TextView
                    android:id="@+id/line_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:text="中文"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/line_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:padding="10dp"
                android:text="线路简介"
                android:textColor="@color/black"
                android:textSize="17sp" 
                />

            <RelativeLayout
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@color/white" >

                <LinearLayout
                    android:id="@+id/author_thumbnail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="10dip"
                    android:background="@color/white" >

                    <ImageView
                        android:id="@+id/author_image"
                        android:layout_width="60dip"
                        android:layout_height="60dip"
                        android:scaleType="centerInside"
                        android:src="@drawable/no_image" />
                </LinearLayout>

                <TextView
                    android:id="@+id/author_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="12dip"
                    android:layout_toRightOf="@id/author_thumbnail"
                    android:text="李某某"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/autor_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/orange"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="执业导游"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/author_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/author_name"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/author_thumbnail"
                    android:text="一个喜欢周游世界的人"
                    android:textColor="@color/black"
                    android:textSize="14sp" 
                    android:layout_toLeftOf="@id/autor_type"/>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/author_thumbnail"
                    android:background="@drawable/selector_list2"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:onClick="authorMoreClicked" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/author_other"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        android:scaleType="matrix"
                        android:src="@drawable/mm_submenu" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>